DisplaySpinner visibility hidden correction

--- a/src/scss/2-utils/_animations.scss
+++ b/src/scss/2-utils/_animations.scss
@@ -14,7 +14,6 @@
 @keyframes displaySpinner {
   95% {
     opacity: 1;
-    visibility: hidden;
   }
 
   100% {
